# geometry

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  basic_scene.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: __init__.py  scenemanager.py
elements/: __init__.py  base.py  dot.py
tests/: test_dot_behaviour.py
